[package]
name = "merge_blocker_serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
serde_json = "1.0.103"
warp = "0.3.5"